--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="home__img">
-                        <img src="assets/img/i04.JPG" alt="">
+                        <img src="assets/img/i04.jpg" alt="">
                     </div>
                 </div>
             </section>
@@ -94,7 +94,7 @@
                         </div>
 
                     </div>
-                    <img src="assets/img/i03.JPG" alt="" class="about__img">
+                    <img src="assets/img/i03.jpg" alt="" class="about__img">
                 </div>
 
 
@@ -149,7 +149,7 @@
 
                     <!-- A cada grupo se le está poniendo la clase de mix y su clase "web" "ux" "app", etc -->
                     <div class="portfolio__content mix web">
-                        <a href="#"><img src="assets/img/productos/Caramelo con coco.JPG" alt="" class="portfolio__img"></a>
+                        <a href="#"><img src="assets/img/productos/Caramelo con coco.jpg" alt="" class="portfolio__img"></a>
                         <div class="portfolio__data">
                             <a href="#"><h2 class="portfolio__title"> Caramelo con coco </h2></a>
                             <span class="portfolio__subtitle">- Ingredientes</span>
@@ -162,7 +162,7 @@
 
 
                     <div class="portfolio__content mix ux">
-                        <a href="#"><img src="assets/img/productos/Pie de limon.JPG" alt="" class="portfolio__img"></a>
+                        <a href="#"><img src="assets/img/productos/Pie de limon.jpg" alt="" class="portfolio__img"></a>
                         <div class="portfolio__data">
                             <a href="#"><h2 class="portfolio__title"> Pie de limón </h2></a>
                             <span class="portfolio__subtitle">- Ingredientes</span>
@@ -174,7 +174,7 @@
                     </div>
                     
                     <div class="portfolio__content mix ux">
-                        <a href="#"><img src="assets/img/productos/Menta con oreo.JPG" alt="" class="portfolio__img"></a>
+                        <a href="#"><img src="assets/img/productos/Menta con oreo.jpg" alt="" class="portfolio__img"></a>
                         <div class="portfolio__data">
                             <a href="#"><h2 class="portfolio__title"> Menta con oreo </h2></a>
                             <span class="portfolio__subtitle">- Ingredientes</span>
@@ -186,7 +186,7 @@
                     </div>
 
                     <div class="portfolio__content mix app">
-                        <a href="#"><img src="assets/img/productos/Ron con pasas.JPG" alt="" class="portfolio__img"></a>
+                        <a href="#"><img src="assets/img/productos/Ron con pasas.jpg" alt="" class="portfolio__img"></a>
                         <div class="portfolio__data">
                             <a href="#"><h2 class="portfolio__title"> Ron con pasas </h2></a>
                             <span class="portfolio__subtitle">- Ingredientes</span>
@@ -198,7 +198,7 @@
                     </div>
                     
                     <div class="portfolio__content mix web">
-                        <a href="#"><img src="assets/img/productos/Ganache de cafe con praline de pecanas.JPG" alt="" class="portfolio__img"></a>
+                        <a href="#"><img src="assets/img/productos/Ganache de cafe con praline de pecanas.jpg" alt="" class="portfolio__img"></a>
                         <div class="portfolio__data">
                             <a href="#"><h2 class="portfolio__title"> Ganache de café con praline de pecanas </h2></a>
                             <span class="portfolio__subtitle">- Ingredientes</span>
